# mobius

./: .gitignore
.claude/: settings.local.json
.claude/agents/: coder.md  finder.md  lead.md  runner.md  tester.md
.claude/hooks/: setup.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/agents/: code-checker.agent.md  code-monkey.agent.md  coder.md  documentation.agent.md  finder.md  lead.md  runner.md  sweng.agent.md  system-architect.agent.md  tester.md
rss-rag/: README.md  config.yaml  feeds.txt  pyproject.toml
rss-rag/dev_docs/: implementation-plan.md  rss-rag-architecture.md
rss-rag/rss_rag/: __init__.py  cli.py  config.py  cost_tracker.py  database.py  discovery.py  embeddings.py  errors.py  feed_manager.py  ingestion.py  llm.py  logging_config.py  search.py
rss-rag/tests/: __init__.py  test_cli.py  test_config.py  test_cost_tracker.py  test_database.py  test_discovery.py  test_embeddings.py  test_errors.py  test_feed_manager.py  test_ingestion.py  test_llm.py  test_search.py
